feat: add nginx

--- a/common/nginx/nginx.conf
+++ b/common/nginx/nginx.conf
@@ -1,16 +1,17 @@
-daemon off;
-worker_processes  4;
+worker_processes  1;
 
-user  root;
+daemon off;
+
+user root;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 error_log  /apps/logs/nginx/error.log;
 
-pid        logs/nginx.pid;
-
+# pid        logs/nginx.pid;
 
 events {
+    use epoll;
     worker_connections  1024;
 }
 
@@ -23,16 +24,27 @@ http {
         '$status $body_bytes_sent "$http_referer" '
         '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  /apps/logs/nginx/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+    keepalive_timeout  0;
+    #keepalive_timeout  65;
 
     #gzip  on;
 
-    include /apps/src/nginx/conf/conf.d/*.conf;
+    server {
+            listen       80;
+            server_name  localhost;
+    
+            root       /apps/wwwroot;
+            location / {
+                index  index.html index.htm index.php;
+            }
+    
+            error_page   500 502 503 504  /50x.html;
+            location = /50x.html {
+                root   html;
+            }
+    }
+    include /apps/srv/nginx/conf/conf.d/*.conf;
 }
 
