--- a/common/nginx/conf.d/default.conf
+++ b/common/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
         listen       80;
-        server_name  localhost;
+        server_name  127.0.0.1;
 
         root       /apps/wwwroot;
         location / {
