feat: add php-fpm

--- a/common/nginx/nginx.conf
+++ b/common/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
 
     server {
             listen       80;
-            server_name  localhost;
+            server_name  127.0.0.1;
     
             root       /apps/wwwroot;
             location / {
