feat: update superviosr

--- a/common/nginx/conf.d/default.conf
+++ b/common/nginx/conf.d/default.conf
@@ -6,7 +6,8 @@ server {
 
         #charset koi8-r;
 
-        #access_log  logs/host.access.log  main;
+        access_log  /apps/logs/nginx/localhost.access.log  main;
+
         root       /apps/wwwroot;
         location / {
 
@@ -41,8 +42,8 @@ server {
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        location ~ /\.git {
+            deny  all;
+        }
     }
 
