--- a/common/supervisor/etc/php-fpm.ini
+++ b/common/supervisor/etc/php-fpm.ini
@@ -1,14 +1,16 @@
 [program:php-fpm]
-directory=/apps/srv/php56/sbin/
-command=/apps/srv/php56/sbin/php-fpm
+command=/apps/srv/php56/sbin/php-fpm -y /apps/srv/php56/etc/php-fpm.conf
 user=root
 priority=999
+numprocs=1
 autostart=true
 autorestart=true
-startsecs=3
-startretries=2
+startsecs=1
+startretries=5
 stopsignal=KILL
 stopwaitsecs=10
 stdout_logfile=/apps/logs/supervisor/php-fpm.log
 stderr_logfile=/apps/logs/supervisor/php-fpm.err
-
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+stopasgroup=true
