--- a/common/supervisor/etc/nginx.ini
+++ b/common/supervisor/etc/nginx.ini
@@ -1,14 +1,17 @@
 [program:nginx]
-directory=/apps/srv/nginx/sbin/
 command=/apps/srv/nginx/sbin/nginx
 user=root
 priority=999
+numprocs=1
 autostart=true
 autorestart=true
-startsecs=3
-startretries=2
+startsecs=1
+startretries=5
 stopsignal=KILL
 stopwaitsecs=10
 stdout_logfile=/apps/logs/supervisor/nginx.log
 stderr_logfile=/apps/logs/supervisor/nginx.err
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+stopasgroup=true
 
